# ukf-localisation

./: README.md
REPORT/: UKF Localisation of Formula Student Car.tex
fs_msgs/: CMakeLists.txt
fs_msgs/msg/: Cone.msg  ControllerOutput.msg
gazebo_simulation/: README.md
gazebo_simulation/eufs_description/: package.xml
gazebo_simulation/eufs_description/robots/: eufs.urdf
gazebo_simulation/eufs_description/scripts/: rename_cones_sdf.py
gazebo_simulation/eufs_description/sensors/: gps.urdf.xacro  imu.urdf.xacro
gazebo_simulation/eufs_gazebo/: CMakeLists.txt  package.xml
gazebo_simulation/eufs_gazebo/cfg/: conesPerception.cfg  gpsPublisher.cfg  odometryPublisher.cfg
gazebo_simulation/eufs_gazebo/config/: simulation.yaml
gazebo_simulation/eufs_gazebo/launch/: small_track.launch
gazebo_simulation/eufs_gazebo/nodes/: center_imu.py  cones_perception.py  gps_publisher.py  odometry_publisher.py
gazebo_simulation/robot_control/: README.md  package.xml
gazebo_simulation/robot_control/launch/: keyboard_robot_control.launch  robot_control.launch  (+1 more)
geodetic_utils/: CMakeLists.txt
geodetic_utils/src/: gps_to_pose_conversion_node.cpp
rviz_visualizer/: CMakeLists.txt
rviz_visualizer/scripts/: cones_visualizer.py  rviz_visualizer.py
ukf_localisation/: CMakeLists.txt  package.xml
ukf_localisation/config/: ukf.yaml
ukf_localisation/launch/: reset_odom.sh  ukf_localisation.launch
ukf_localisation/rviz/: ukf_localisation.rviz
ukf_localisation/src/: diff_odom_publisher.py  distance_publisher.py  localisation_node.py  ukf_localisation.py
(+7 files in other folders)
